# chatapodjavorinou

./: .gitignore  README.md  captain-definition  package-lock.json  package.json  pyproject.toml  tailwind.config.js
chatapodjavorinou/: manage.py
chatapodjavorinou/booking/: admin.py  forms.py  models.py  urls.py  views.py
chatapodjavorinou/booking/migrations/: 0001_initial.py
chatapodjavorinou/booking/static/booking/: calendar.js
chatapodjavorinou/booking/templates/booking/: reservation.html  success.html
chatapodjavorinou/chatapodjavorinou/: asgi.py  settings.py  settings_caprover.py  settings_dev.py  urls.py  wsgi.py
chatapodjavorinou/css/: tailwind.css
chatapodjavorinou/static/: app.css
chatapodjavorinou/templates/: base.html
chatapodjavorinou/web/: urls.py  views.py
chatapodjavorinou/web/templates/web/: about.html  activities.html  contact.html  home.html
public/: index.html
util/: run.sh
